fix: spacing and color

--- a/sites/public/src/components/assistance/Assistance.module.scss
+++ b/sites/public/src/components/assistance/Assistance.module.scss
@@ -71,6 +71,9 @@
 
     .contact-card-description {
       color: var(--seeds-text-color-light);
+      p:last-of-type {
+        margin-block-start: var(--seeds-spacer-text);
+      }
     }
 
     .contact-card-info {
